samples/_failures_safe/1761558013_7e4fd8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c77243f8.c: In function ‘main’:
./samples/SAFE/__tmp_c77243f8.c:152:5: error: expected declaration or statement at end of input
  152 |     time_t earliest = logs[0].timestamp;
      |     ^~~~~~
